src/test/deca/syntax/valid/test_synt/variables/variable_as_inst.deca
// Description:
//    X comme une instruction.
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur
//
// Historique:
//    cree le 12/01/2022

{
    int x;
    x;
}
