src/test/deca/syntax/invalid/test_synt/control_structures/while_not_started.deca
// Description:
//    Declaration dun while sans ouvrant
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: erreur de parse instruction ligne 12
//
// Historique:
//    cree le 14/01/2022

{
    while(true)
}